--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,73 @@
 <resources>
     <string name="app_name">appdev2</string>
+    <string-array name="spinner_seoul">
+        <item>강남구</item> <item>강동구</item> <item>강북구</item>
+        <item>강서구</item> <item>관악구</item> <item>광진구</item>
+        <item>구로구</item> <item>금천구</item> <item>노원구</item>
+        <item>도봉구</item> <item>동대문구</item> <item>동작구</item>
+        <item>마포구</item> <item>서대문구</item> <item>서초구</item>
+        <item>성동구</item> <item>성북구</item> <item>송파구</item>
+        <item>양천구</item> <item>영등포구</item> <item>용산구</item>
+        <item>은평구</item> <item>종로구</item> <item>중구</item>
+        <item>중랑구</item>
+    </string-array>
+    <string-array name="spinner_seoul_sub">
+        <item>없 음</item>
+    </string-array>
+
+    <string-array name="spinner_ChungBuck">
+        <item>시 선택</item>
+        <item>충주</item>
+        <item>청주</item>
+    </string-array>
+
+    <string-array name="spinner_cheongu">
+        <item>구 선택</item>
+        <item>서원구</item>
+        <item>강서구</item>
+    </string-array>
+
+    <string-array name="spinner_from">
+    <item>서울특별시</item>
+    <item>경기도</item>
+    <item>강원도</item>
+    <item>충청남도</item>
+    <item>충청북도</item>
+    <item>전라남도</item>
+    <item>전라북도</item>
+    <item>경상남도</item>
+    <item>경상북도</item>
+    <item>제주도</item>
+</string-array>
+
+    <string-array name="spinner_hobby">
+        <item>선택하시오</item>
+        <item>운동</item>
+        <item>음악</item>
+        <item>영화</item>
+    </string-array>
+    <string-array name="spinner_hobby_sport">
+        <item>축구</item>
+        <item>농구</item>
+        <item>배드민턴</item>
+        <item>테니스</item>
+        <item>수영</item>
+    </string-array>
+    <string-array name="spinner_hobby_music">
+        <item>힙합</item>
+        <item>발라드</item>
+        <item>인디</item>
+        <item>팝송</item>
+        <item>클래식</item>
+    </string-array>
+    <string-array name="spinner_hobby_movie">
+        <item>공포</item>
+        <item>스릴러</item>
+        <item>로맨스</item>
+        <item>히어로물</item>
+        <item>애니메이션</item>
+    </string-array>
+    <string-array name="spinner_hobby_empty">
+        <item>항목을 고르시오.</item>
+    </string-array>
 </resources>
