--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,30 @@
 <resources>
     <string name="app_name">appdev2</string>
     <string-array name="spinner_seoul">
-        <item>강남구</item> <item>강동구</item> <item>강북구</item>
-        <item>강서구</item> <item>관악구</item> <item>광진구</item>
-        <item>구로구</item> <item>금천구</item> <item>노원구</item>
-        <item>도봉구</item> <item>동대문구</item> <item>동작구</item>
-        <item>마포구</item> <item>서대문구</item> <item>서초구</item>
-        <item>성동구</item> <item>성북구</item> <item>송파구</item>
-        <item>양천구</item> <item>영등포구</item> <item>용산구</item>
-        <item>은평구</item> <item>종로구</item> <item>중구</item>
+        <item>강남구</item>
+        <item>강동구</item>
+        <item>강북구</item>
+        <item>강서구</item>
+        <item>관악구</item>
+        <item>광진구</item>
+        <item>구로구</item>
+        <item>금천구</item>
+        <item>노원구</item>
+        <item>도봉구</item>
+        <item>동대문구</item>
+        <item>동작구</item>
+        <item>마포구</item>
+        <item>서대문구</item>
+        <item>서초구</item>
+        <item>성동구</item>
+        <item>성북구</item>
+        <item>송파구</item>
+        <item>양천구</item>
+        <item>영등포구</item>
+        <item>용산구</item>
+        <item>은평구</item>
+        <item>종로구</item>
+        <item>중구</item>
         <item>중랑구</item>
     </string-array>
     <string-array name="spinner_seoul_sub">
@@ -28,17 +44,17 @@
     </string-array>
 
     <string-array name="spinner_from">
-    <item>서울특별시</item>
-    <item>경기도</item>
-    <item>강원도</item>
-    <item>충청남도</item>
-    <item>충청북도</item>
-    <item>전라남도</item>
-    <item>전라북도</item>
-    <item>경상남도</item>
-    <item>경상북도</item>
-    <item>제주도</item>
-</string-array>
+        <item>서울특별시</item>
+        <item>경기도</item>
+        <item>강원도</item>
+        <item>충청남도</item>
+        <item>충청북도</item>
+        <item>전라남도</item>
+        <item>전라북도</item>
+        <item>경상남도</item>
+        <item>경상북도</item>
+        <item>제주도</item>
+    </string-array>
 
     <string-array name="spinner_hobby">
         <item>선택하시오</item>
