채팅방 임시구현 2 (아직 버그가 있을 수 있음)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">appdev2</string>
+    <string name="app_name">MeYou</string>
 
     <string-array name="spinner_hobby">
         <item>대분류</item>
